# facct-tutorial

./: .gitignore  README.md  config.yml  crowd.py  gunicorn_start  main.py  models.py  paper_lock.py  pyproject.toml  requirements.txt  unlocker.py  utils.py
configs/: weird.conf  wlock.conf
static/: full-papers.csv  hits-5-test.csv
static/js/: form.js
static/templates/: error.html  index.html  weird.html  wild.html
