[tool.poetry]
name = "facct-tutorial"
version = "0.1.0"
description = ""
authors = ["Ali Akbar Septiandri <ali.septiandri@gmail.com>"]
readme = "README.md"
packages = [{include = "facct_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pandas = "^1.5.3"
requests = "^2.28.2"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pyyaml = "^6.0"
pottery = "^3.0.0"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
